--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@ body {
     display: flex;
     flex-direction: column;
     gap: 5rem;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     overflow: hidden;
 }
 
 body>h1 {
+    margin-top: 3rem;
     font-size: 4rem;
 }
 
